# Computer-Technologies-4th-sem

./: .gitmodules  2.2.3.cpp  3.2.cpp  4.2.2.cpp  6.3.3.cpp  README.md
5.7/: 5.7.cpp  CMakeLists.txt
